--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "material-table": "^2.0.3",
+    "next": "^12.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-query": "^3.34.19",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
